# workflow-client

./: .gitignore  LICENSE  README.md  build.sh  models.py  pyproject.toml
tests/: conftest.py  test_all_apis.py  test_ast_models.py  test_celery_client.py  test_celery_decorators.py  test_collection_api.py  test_document_api.py  test_embedding_api.py  test_extraction_api.py  test_search_api.py  test_similarity_api.py  test_similarity_client.py  test_vector_api.py
workflow_client/: __init__.py  client.py  consul_client.py  exceptions.py  graph_knowledge_client.py  identifiers.py  knowledge_client.py  models.py  service_discovery.py
workflow_client/celery_client/: __init__.py  client.py  config.py  decorators.py  exceptions.py
workflow_client/models/: __init__.py  graph_knowledge.py  knowledge.py
workflow_client/models/ast/: __init__.py  ast.py  business_rules.py  decision_tables.py  enums.py  expected_count.py  expected_output.py  screen_classification.py  sql_verifications.py  test_case_id.py  test_generation_rules.py  test_scenarios.py  viewpoint_mapping.py  widget_registry.py
workflow_client/models/mindmap/: __init__.py  components.py  enums.py  mindmap.py  templates.py
workflow_client/parsers/: __init__.py  golden_parser.py
